# mlops_project_AliMohti_Fadykhazzaka

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/0/9bfb03d7d0e3471e9b69f13e34496235/: meta.yaml
mlruns/0/9bfb03d7d0e3471e9b69f13e34496235/artifacts/model/: MLmodel  conda.yaml  requirements.txt
mlruns/0/9bfb03d7d0e3471e9b69f13e34496235/metrics/: accuracy
mlruns/0/9bfb03d7d0e3471e9b69f13e34496235/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/b125486e3c674c13a8caee2596541227/: meta.yaml
mlruns/0/b125486e3c674c13a8caee2596541227/tags/: mlflow.runName
mlruns/0/d1970a8e9b7449d2aa9c95db3f6d2f97/: meta.yaml
mlruns/0/d1970a8e9b7449d2aa9c95db3f6d2f97/tags/: mlflow.runName  mlflow.source.name
src/customer_churn_pred/: config.yaml  data_preprocessing.py  evaluation_strategy.py  experiment_tracker.py  inference.py  logger.py  model.py  model_factory.py  train.py
tests/: test_model.py
